--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p class="info-card margin-bottom">Lunge</p>
                 <img
                   class="hidden"
-                  src="/assets/img/agachando.svg"
+                  src="/assets/img/agachando.png"
                   alt="woman-squad"
                 />
               </div>
